crates/svelte-parser/tests/snapshots/snapshots__regex_quantifier_braces.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
{value.match(/\d{2,4}/)}

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Expression(
                ExpressionTag {
                    span: Span {
                        start: 0,
                        end: 24,
                    },
                    expression_span: Span {
                        start: 1,
                        end: 23,
                    },
                    expression: "value.match(/\\d{2,4}/)",
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 24,
        },
    },
    span: Span {
        start: 0,
        end: 24,
    },
}
