crates/svelte-parser/tests/snapshots/snapshots__regex_simple.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
{value.match(/test/)}

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Expression(
                ExpressionTag {
                    span: Span {
                        start: 0,
                        end: 21,
                    },
                    expression_span: Span {
                        start: 1,
                        end: 20,
                    },
                    expression: "value.match(/test/)",
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 21,
        },
    },
    span: Span {
        start: 0,
        end: 21,
    },
}
