crates/svelte-parser/tests/snapshots/snapshots__regex_with_char_class.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
{value.match(/[^)]+/)}

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Expression(
                ExpressionTag {
                    span: Span {
                        start: 0,
                        end: 22,
                    },
                    expression_span: Span {
                        start: 1,
                        end: 21,
                    },
                    expression: "value.match(/[^)]+/)",
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 22,
        },
    },
    span: Span {
        start: 0,
        end: 22,
    },
}
